# notcoal

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
examples/: rules.json
src/: error.rs  filter.rs  lib.rs  operations.rs
