[package]
name = "notcoal"
version = "0.3.0"
authors = ["eaon <eaon@mit.edu>"]
description = "Not charcoal filters, but notmuch ones. Filter library for the notmuch email system"
repository = "https://ghom.niij.org/eaon/notcoal/"
license = "GPL-3.0"
readme = "README.md"
keywords = ["notmuch", "filter", "tagging"]
categories = ["command-line-utilities", "email"]
edition = "2018"

[dependencies]
notmuch = "0.5"
regex = "1"
serde = { version = ">= 1.0.82, < 1.1", features = ["derive"] }
serde_json = "1"
mailparse = "0.6"
structopt = { version = "0.2", optional = true }
dirs = { version = "1", optional = true }
rust-ini = { version = "0.13", optional = true }

[features]
standalone = ["structopt", "dirs", "rust-ini"]

[badges]
appveyor = { repository = "eaon/notcoal", service = "git", id = "oom2djam6b8xasom" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "notcoal"
required-features = ["standalone"]
