[package]
name = "notcoal"
version = "0.4.0"
authors = ["eaon <eaon@posteo.net>"]
description = "Not charcoal filters, but notmuch ones. Filter library for the notmuch email system"
repository = "https://codeberg.org/eaon/notcoal/"
license = "GPL-3.0"
readme = "README.md"
keywords = ["notmuch", "filter", "tagging"]
categories = ["command-line-utilities", "email"]
edition = "2021"

[dependencies]
notmuch = "0.8"
regex = "1"
serde = { version = ">= 1.0.82, < 1.1", features = ["derive"] }
serde_json = "1"
mailparse = "0.14"
clap = { version = "4.5", features = ["derive"], optional = true }
dirs = { version = "5.0", optional = true }

[features]
standalone = ["clap", "dirs"]

[badges]
maintenance = { status = "passively-maintained" }

[[bin]]
name = "notcoal"
required-features = ["standalone"]
